fixed mastodon dark mode background

--- a/_sass/_dark.scss
+++ b/_sass/_dark.scss
@@ -1,4 +1,5 @@
-body {
+body,
+.mastodon li {
   background-color: $bg-color-dark;
 }
 
