--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -366,7 +366,7 @@ header.small {
 }
 
 .mastodon li {
-  background: $bg-color;
+  background-color: $bg-color;
   padding: 0.5em;
   border-radius: 0.5em;
 }
